[project]
name = "crossbow-agent"
version = "2.0.2"
description = "World's first fully autonomous AI security engineer"
requires-python = ">=3.11"
authors = [
    {name = "Crossbow Security"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["security", "ai", "pentesting", "vulnerability-scanner", "bug-bounty"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "agno>=2.2.6",
    "anthropic>=0.72.0",
    "bandit>=1.8.6",
    "ddgs>=9.7.0",
    "dnspython>=2.8.0",
    "duckduckgo-search>=8.1.1",
    "google-genai>=1.47.0",
    "google-generativeai>=0.8.5",
    "julia-browser>=2.1.0",
    "litellm>=1.79.1",
    "mcp>=1.21.0",
    "openai>=2.6.1",
    "paramiko>=4.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "semgrep>=1.85.0",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
crossbow = "crossbow_cli:main"

[project.urls]
Homepage = "https://github.com/crossbow-security/crossbow"
Repository = "https://github.com/crossbow-security/crossbow"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
